git: default to nano instead of vim (#28202)
to match what we do with cygwin git

--- a/mingw-w64-git/PKGBUILD
+++ b/mingw-w64-git/PKGBUILD
@@ -19,7 +19,7 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
 	 "${MINGW_PACKAGE_PREFIX}-${_realname}-for-windows-addons")
 tag=2.53.0.windows.1
 pkgver=2.53.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="The fast distributed version control system (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -102,6 +102,7 @@ else
 fi
 
 SHAREDIR=$MINGW_PREFIX/share/git
+_DEFAULT_EDITOR=nano
 
 prepare () {
   cd "$srcdir/git" &&
@@ -111,6 +112,7 @@ prepare () {
 	USE_ASCIIDOCTOR = YesPlease
 	COMPAT_CFLAGS += $COMPAT_CFLAGS
 	LDFLAGS = $LDFLAGS
+  DEFAULT_EDITOR = $_DEFAULT_EDITOR
 	EOF
 
   cp ../git-bash.adoc Documentation/
@@ -174,7 +176,8 @@ package_git () {
            "${MINGW_PACKAGE_PREFIX}-ca-certificates"
            "${MINGW_PACKAGE_PREFIX}-expat>=2.0"
            "${MINGW_PACKAGE_PREFIX}-openssl"
-           "${MINGW_PACKAGE_PREFIX}-pcre2")
+           "${MINGW_PACKAGE_PREFIX}-pcre2"
+           "$_DEFAULT_EDITOR")
 
   cd "$srcdir"/git
 
